added dotted lined

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <template>
           <div
-            style="border: 2px solid var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;"
+            style="border: 2px dotted var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;"
           >
             <p style="display:inline"></p>
             <i
