--- a/shopping.html
+++ b/shopping.html
@@ -29,7 +29,7 @@
         </form>
         <template>
           <article
-            style="border: 2px solid var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;cursor: pointer;"
+            style="border: 2px dotted var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;cursor: pointer;"
           >
             <p style="display:inline; cursor: pointer;"></p>
             <i
@@ -121,7 +121,7 @@
         <template id="receipt-template">
           <article
             id="receipt-element"
-            style="border: 2px solid var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;"
+            style="border: 2px dotted var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;"
           >
             <p id="receipt-item" style="display:inline"></p>
             <p id="receipt-price" style="display:inline"></p>
