--- a/kitchen.html
+++ b/kitchen.html
@@ -29,7 +29,7 @@
         </form>
         <template>
           <article
-            style="border: 2px solid var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;cursor: pointer;"
+            style="border: 2px dotted var(--main-color); padding: 20px 20px 20px 10px; margin-bottom: 20px;cursor: pointer;"
           >
             <p style="display:inline;cursor: pointer;"></p>
             <i
